--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Marco
+                        <span class="text-primary">Giannini</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Quello del pacco ·
+                        <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="http://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/marcogiannini"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/Marcooo83"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/pages/Marcos-Box/204256869707263"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://youtube.com/@quellodelpacco"><i class="fab fa-youtube"></i></a>
+                        <a class="social-icon" href="https://t.me/marcosbox"><i class="fab fa-telegram"></i></a>
+                        <a class="social-icon" href="https://anchor.fm/marcosbox"><i class="fab fa-podcast"></i></a>
                     </div>
                 </div>
             </section>
