--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Resume - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
@@ -44,7 +44,7 @@
                         <span class="text-primary">Giannini</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Quello del pacco ·
+                        Quello del pacco https://www.marcosbox.org/·
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box</p>
