--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Quello del pacco.
-                        <a class="link" href="https://www.marcosbox.org/"></a>
+                        <a href="https://www.marcosbox.org/"></a>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box</p>
@@ -56,7 +56,7 @@
                         <a class="social-icon" href="https://www.facebook.com/pages/Marcos-Box/204256869707263"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://youtube.com/@quellodelpacco"><i class="fab fa-youtube"></i></a>
                         <a class="social-icon" href="https://t.me/marcosbox"><i class="fab fa-telegram"></i></a>
-                        <a class="social-icon" href="https://anchor.fm/marcosbox"><i class="fab fa-solid fa-podcast"></i></a>
+                        <a class="social-icon" href="https://anchor.fm/marcosbox"><i class="fa-solid fa-podcast"></i></a>
                     </div>
                 </div>
             </section>
