--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Quello del pacco.
-                        <a href="https://www.marcosbox.org/">Marco's Box</a>
+                        <a href="https://www.marcosbox.org/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box</p>
