--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <a href="https://www.marcosbox.org/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box.</p>
+                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Nella vita lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica a 360°. Sul web mi trovate sui seguenti social:
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/marcogiannini"><i class="fab fa-github"></i></a>
