--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <meta name="google-site-verification" content="UK396uHefi32mGcM1ixB2WPx6CbgwWKoSyRg8rTE45M" />
     </body>
 </html>
