--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Nella vita lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica a 360°. Nel web mi trovate su:
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="http://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/marcogiannini"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/Marcooo83"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/pages/Marcos-Box/204256869707263"><i class="fab fa-facebook-f"></i></a>
