--- a/index-dark.html
+++ b/index-dark.html
@@ -107,7 +107,7 @@
 						<div class="tokyo_tm_home">
 							<div class="home_content">
 								<div class="avatar" data-type="wave"> <!-- data-type values are: "wave", "circle", "square"-->
-									<div class="image" data-img-url="img/portfolio/1.jpg"></div>
+									<div class="image" data-img-url="img/foto/profile.jpg"></div>
 								</div>
 								<div class="details">
 									<h3 class="name">Marco <span>Giannini</span></h3>
