--- a/index.html
+++ b/index.html
@@ -110,15 +110,17 @@
 									<div class="image" data-img-url="img/portfolio/1.jpg"></div>
 								</div>
 								<div class="details">
-									<h3 class="name">Adriano <span>Smith</span></h3>
-									<p class="job">I am a WordPress Developer at heart and create features that are best suited for the job at hand.</p>
+									<h3 class="name">Marco <span>Giannini</span></h3>
+									<p class="job">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Nella vita lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica a 360°. Online mi trovate su:</p>
 									<div class="social">
 										<ul>
-											<li><a href="#"><i class="icon-facebook-squared"></i></a></li>
-											<li><a href="#"><i class="icon-twitter-squared"></i></a></li>
-											<li><a href="#"><i class="icon-behance-squared"></i></a></li>
-											<li><a href="#"><i class="icon-linkedin-squared"></i></a></li>
-											<li><a href="#"><i class="icon-instagram-"></i></a></li>
+											<li><a href="https://www.facebook.com/pages/Marcos-Box/204256869707263"><i class="icon-facebook-squared"></i></a></li>
+											<li><a href="https://twitter.com/Marcooo83"><i class="icon-twitter-squared"></i></a></li>
+											<li><a href="https://github.com/marcogiannini"><i class="icon-github-squared"></i></a></li>
+											<li><a href="https://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="icon-linkedin-squared"></i></a></li>
+											<li><a href="https://youtube.com/@quellodelpacco"><i class="icon-youtube-squared"></i></a></li>
+											<li><a href="https://t.me/marcosbox"><i class="icon-telegram-squared"></i></a></li>
+											<li><a href="https://anchor.fm/marcosbox"><i class="icon-podcast-squared"></i></a></li>
 										</ul>
 									</div>
 								</div>
