--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <meta name="google-site-verification" content="UK396uHefi32mGcM1ixB2WPx6CbgwWKoSyRg8rTE45M" />
+		<meta name="google-site-verification" content="UK396uHefi32mGcM1ixB2WPx6CbgwWKoSyRg8rTE45M" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -24,8 +24,6 @@
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-            </div>
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
@@ -37,12 +35,11 @@
                         <span class="text-primary">Giannini</span>
                     </h1>
                     <div class="subheading mb-5">
-                        (Quello del pacco) -
+                        (Quello del pacco) ·
                         <a href="https://www.marcosbox.org/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Nella vita lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica a 360°. Online mi trovate su:
-                    </p>
+                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica. Online mi trovate su:</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/marcogiannini"><i class="fab fa-github"></i></a>
@@ -55,8 +52,9 @@
                 </div>
             </section>
             <hr class="m-0" />
+        </div>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
