--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         (Quello del pacco) ·
                         <a href="https://www.marcosbox.org/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a>
-						<a href="https://github.com/marcogiannini/marcogiannini.github.io/blob/main/curriculum/curriculum%20marco%20giannini.pdf">curriculum vitae</a>
+			<a href="https://github.com/marcogiannini/marcogiannini.github.io/blob/main/curriculum/curriculum%20marco%20giannini.pdf">Curriculum Vitae</a>
                     </div>
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica. Online mi trovate su:</p>
                     <div class="social-icons">
