--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Marco Giannini</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile2.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -40,7 +40,7 @@
                         (Quello del pacco) ·
                         <a href="https://www.marcosbox.org/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a><br>
-			<a href="marcogiannini.github.io/curriculum/curriculum_marco_giannini.pdf" target="_blank">Curriculum Vitae</a>
+			<a href="marcogiannini.github.io/curriculum/curriculum_giannini_marco.pdf" target="_blank">Curriculum Vitae</a>
                     </div>
                     <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica. Online mi trovate su:</p>
                     <div class="social-icons">
