--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         (Quello del pacco) ·
-                        <a href="https://www.marcosbox.org/">Marco's Box</a><br>
+                        <a href="https://www.marcosbox.com/">Marco's Box</a><br>
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a><br>
 			<a href="marcogiannini.github.io/curriculum/curriculum_giannini_marco.pdf" target="_blank">Curriculum Vitae</a>
                     </div>
