--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="mailto:name@email.com">giannini.marco@gmail.com</a><br>
 			<a href="marcogiannini.github.io/curriculum/curriculum_giannini_marco.pdf" target="_blank">Curriculum Vitae</a>
                     </div>
-                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Lavoro presso uno studio di amministrazione condominiale e immobiliare, collaboro con uno studio tecnico di geometri e nel tempo libero coltivo la mia passione per l'informatica. Online mi trovate su:</p>
+                    <p class="lead mb-5">Sono Marco Giannini, sostenitore del software libero e open source. Sul web sono conosciuto ai più per essere l'autore del sito internet Marco's Box. Per mantenermi faccio diversi lavori. La mattina lavoro come impiegato presso la Fondedil, società che si occupa di produzione e vendita di materiale acquedottistico, il pomeriggio lavoro presso uno studio di amministrazione condominiale e immobiliare ed infine collaboro con uno studio tecnico di geometri. Nel tempo libero coltivo la mia passione per l'informatica. Online mi trovate su:</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://it.linkedin.com/pub/marco-giannini/51/979/a4a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/marcogiannini"><i class="fab fa-github"></i></a>
